--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -40,7 +40,7 @@
 {
     "files.defaultLanguage": "c", // ctrl+N新建文件后默认的语言
     "editor.formatOnType": true, // （对于C/C++）输入分号后自动格式化当前这一行的代码
-    "editor.formatOnSave": false,
+    "editor.formatOnSave": true,
     "editor.suggest.snippetsPreventQuickSuggestions": false, // clangd的snippets有很多的跳转点，不用这个就必须手动触发Intellisense了
     "editor.acceptSuggestionOnEnter": "off", // 我个人的习惯，按回车时一定是真正的换行，只有tab才会接受Intellisense
     // "editor.snippetSuggestions": "top", // （可选）snippets显示在补全列表顶端，默认是inline
@@ -63,4 +63,16 @@
     "files.associations": {
         "circle_new.h": "c"
     }, // 同上
+    "arduino.path": "D:/Program Files (x86)/Arduino",
+    "arduino.commandPath": "D:/Program Files (x86)/Arduino/arduino_debug.exe",
+    "arduino.logLevel": "info",
+    "arduino.allowPDEFiletype": false,
+    "arduino.enableUSBDetection": true,
+    "arduino.disableTestingOpen": false,
+    "arduino.skipHeaderProvider": false,
+    "arduino.additionalUrls": [
+        "https://raw.githubusercontent.com/VSChina/azureiotdevkit_tools/master/package_azureboard_index.json",
+        "http://arduino.esp8266.com/stable/package_esp8266com_index.json"
+    ],
+    "arduino.defaultBaudRate": 115200
 }
